카트 페이지 한글화 작업

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -11,7 +11,57 @@
         "please_login_to_view_cart": "Please login to view cart",
         "hello": "Hello",
         "view_all_categories": "View All Categories",
-        "shop_now": "Shop Now"
+        "shop_now": "Shop Now",
+        "confirm": "Confirm",
+        "updating": "Updating...",
+        "adding": "Adding...",
+        "customer": "Customer"
+    },
+    "cart": {
+        "title": "Cart",
+        "empty_cart_message": "Your cart is empty. Check out our various products!",
+        "go_to_shopping": "Go Shopping",
+        "cart_summary": "Order Summary",
+        "sub_total": "Subtotal",
+        "discount": "Discount",
+        "shipping": "Shipping",
+        "free": "Free",
+        "total_payment": "Total Payment",
+        "login_to_order": "Login to Order",
+        "placing_order": "Placing order...",
+        "select_address_to_checkout": "Please select a shipping address",
+        "place_order": "Place Order",
+        "please_select_address": "Please select a shipping address.",
+        "login_required_to_place_order": "Login is required to place an order.",
+        "you_can_browse_and_add": "You can browse and add items to your cart without logging in, but you must log in to complete your order.",
+        "sign_in_to_continue": "Sign in to continue",
+        "congratulations_free_shipping": "Congratulations! You're eligible for free shipping.",
+        "add_more_for_free_shipping": "Add ",
+        "add_more_for_free_shipping_suffix": " more for free shipping.",
+        "free_shipping_on_orders_over": "Free shipping on orders over ",
+        "free_shipping": "Free Shipping",
+        "shipping_address": "Shipping Address",
+        "change": "Change",
+        "collapse": "Collapse",
+        "no_shipping_addresses": "No shipping addresses registered.",
+        "add_shipping_address": "Add Shipping Address",
+        "add_new_address": "Add New Address",
+        "selected_address": "Selected Address",
+        "default": "Default",
+        "please_sign_in_to_manage": "Please sign in to manage shipping addresses.",
+        "edit_address": "Edit Address",
+        "payment_processing": "Processing payment...",
+        "payment_ready": "Preparing payment...",
+        "total_order_amount": "Total Order Amount",
+        "payment_fail_prefix": "Payment failed: ",
+        "try_again_simple": "Please try again.",
+        "checkout_title": "Checkout",
+        "widget_error_no_key": "Payment config error: Client key is missing.",
+        "widget_error_load_failed": "Failed to load payment system. Please refresh the page.",
+        "payment_system_preparing": "Preparing payment system. Please try again in a moment.",
+        "order_creation_failed": "Order creation failed",
+        "item_count_suffix": "{{title}} and {{count}} more",
+        "product_removed": "Item removed from cart"
     },
     "header": {
         "freeShipping": "Free shipping on orders over {{amount}}"
