--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -12,7 +12,57 @@
         "hello": "您好",
         "view_all_categories": "查看所有分类",
         "shop_now": "立即购买",
-        "all": "全部"
+        "all": "全部",
+        "confirm": "确认",
+        "updating": "更新中...",
+        "adding": "添加中...",
+        "customer": "顾客"
+    },
+    "cart": {
+        "title": "购物车",
+        "empty_cart_message": "您的购物车是空的。看看我们的各种产品！",
+        "go_to_shopping": "去购物",
+        "cart_summary": "订单摘要",
+        "sub_total": "商品总计",
+        "discount": "折扣金额",
+        "shipping": "运费",
+        "free": "免费",
+        "total_payment": "最终支付金额",
+        "login_to_order": "登录后下单",
+        "placing_order": "订单处理中...",
+        "select_address_to_checkout": "请选择收货地址",
+        "place_order": "去结算",
+        "please_select_address": "请选择收货地址。",
+        "login_required_to_place_order": "下单需要先登录。",
+        "you_can_browse_and_add": "您可以无需登录即可浏览并添加商品，但结算时需要先登录。",
+        "sign_in_to_continue": "登录以继续",
+        "congratulations_free_shipping": "恭喜！您已符合免运费条件。",
+        "add_more_for_free_shipping": "再买 ",
+        "add_more_for_free_shipping_suffix": " 即可免运费。",
+        "free_shipping_on_orders_over": " 满额免运费",
+        "free_shipping": "免运费",
+        "shipping_address": "收货地址信息",
+        "change": "更改",
+        "collapse": "收起",
+        "no_shipping_addresses": "暂无已注册的收货地址。",
+        "add_shipping_address": "添加收货地址",
+        "add_new_address": "添加新地址",
+        "selected_address": "选中的地址",
+        "default": "默认",
+        "please_sign_in_to_manage": "请登录以管理收货地址。",
+        "edit_address": "编辑地址",
+        "payment_processing": "支付处理中...",
+        "payment_ready": "准备支付中...",
+        "total_order_amount": "订单总额",
+        "payment_fail_prefix": "支付失败: ",
+        "try_again_simple": "请重试。",
+        "checkout_title": "结算",
+        "widget_error_no_key": "支付配置错误：缺少客户端密钥。",
+        "widget_error_load_failed": "加载支付系统失败。请刷新页面。",
+        "payment_system_preparing": "正在准备支付系统。请稍后再试。",
+        "order_creation_failed": "订单创建失败",
+        "item_count_suffix": "{{title}} 等 {{count}} 件",
+        "product_removed": "商品已从购物车删除"
     },
     "header": {
         "freeShipping": "订单满 {{amount}} 免运费"
