'새 주소 추가' 모달 하단에 영문 혹은 키값(common.cancel)으로 노출되던 '취소' 버튼 문제를 해결

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -15,7 +15,8 @@
         "confirm": "Confirm",
         "updating": "Updating...",
         "adding": "Adding...",
-        "customer": "Customer"
+        "customer": "Customer",
+        "cancel": "Cancel"
     },
     "cart": {
         "title": "Cart",
