영어로 보이는 곳 다시 한글화 작업 마이페이지

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -318,5 +318,187 @@
         "load_more_offers": "Load More Offers",
         "try_adjusting_filters": "Try adjusting your filters to find more products.",
         "clear_filters": "Clear Filters"
+    },
+    "account": {
+        "profile": "Profile",
+        "addresses": "Addresses",
+        "orders": "Orders",
+        "payment": "Payment",
+        "notifications": "Notifications",
+        "settings": "Settings",
+        "title": "Edit Profile",
+        "edit_profile": "Edit Profile",
+        "admin_dashboard": "Admin Dashboard",
+        "full_name": "Full Name",
+        "enter_full_name": "Enter your full name",
+        "email_address": "Email Address",
+        "email_cannot_be_changed": "Email address cannot be changed",
+        "phone_number": "Phone Number",
+        "enter_phone_number": "Enter your phone number",
+        "change_picture": "Change Picture",
+        "uploading": "Uploading...",
+        "file_format_note": "JPG, GIF or PNG. Max size 2MB",
+        "no_image": "No Image",
+        "password_settings": "Password Settings",
+        "change_password": "Change Password",
+        "current_password": "Current Password",
+        "enter_current_password": "Enter current password",
+        "new_password": "New Password",
+        "enter_new_password": "Enter new password",
+        "confirm_new_password": "Confirm New Password",
+        "confirm_new_password_placeholder": "Re-enter new password",
+        "update_profile": "Update Profile",
+        "updating": "Updating...",
+        "cancel": "Cancel",
+        "name_required": "Full name is required",
+        "email_required": "Email address is required",
+        "valid_email": "Please enter a valid email address",
+        "valid_phone": "Please enter a valid phone number",
+        "current_password_required": "Current password is required",
+        "password_min_length": "Password must be at least 6 characters",
+        "passwords_do_not_match": "Passwords do not match",
+        "new_password_required": "New password is required",
+        "oauth_user": "Social Account User",
+        "oauth_description": "This account is signed in via a social provider. Password settings are managed there.",
+        "total_orders": "Total Orders",
+        "saved_addresses": "Saved Addresses",
+        "years_with_us": "Years with Us",
+        "current_user_info": "Current User Info",
+        "id": "ID",
+        "not_available": "Not Available",
+        "name": "Name",
+        "email": "Email",
+        "role": "Role",
+        "is_admin": "Is Admin",
+        "yes": "Yes",
+        "no": "No",
+        "is_authenticated": "Is Authenticated",
+        "provider": "Provider",
+        "created_at": "Created At",
+        "first_name": "First Name",
+        "last_name": "Last Name",
+        "phone": "Phone",
+        "saved": "Saved",
+        "not_provided": "Not Provided",
+        "quick_actions": "Quick Actions",
+        "manage_addresses": "Manage Addresses",
+        "manage_addresses_desc": "Check and manage your delivery addresses.",
+        "add_new_address": "Add New Address",
+        "default_address": "Default Address",
+        "no_addresses": "No saved addresses.",
+        "no_addresses_desc": "Please add shipping address for ordering.",
+        "add_first_address": "Add Your First Address",
+        "edit_address": "Edit Address",
+        "add_address": "Add Address",
+        "recipient_name": "Recipient",
+        "recipient_placeholder": "Recipient name",
+        "search_address": "Search Address",
+        "zipcode": "Zip Code",
+        "search_address_first": "Auto-filled after search",
+        "address": "Address",
+        "detail_address": "Detail Address",
+        "detail_address_placeholder": "e.g. Room 101, Apt Name, etc.",
+        "entrance_code": "Entrance Code",
+        "entrance_code_placeholder": "e.g. 1234",
+        "entrance_code_notice": "Entrance code is stored for delivery purpose only.",
+        "set_as_default": "Set as Default Address",
+        "delivery_request_notice": "Non-face-to-face delivery is performed due to social distancing.",
+        "recipient_required": "Recipient name is required",
+        "zipcode_required": "Zip code is required",
+        "address_required": "Address is required",
+        "detail_address_required": "Detail address is required",
+        "order_history": "Order History",
+        "payment_methods": "Payment Methods",
+        "manage_payment": "Manage your payment info and methods",
+        "manage_security": "Security Management",
+        "order_details": "Order Details",
+        "placed_on": "Placed on: {{date}}",
+        "pay_now": "Pay Now",
+        "track_order": "Track Order",
+        "total_amount": "Total Amount",
+        "total": "Total",
+        "error_loading_orders": "An error occurred while loading order history",
+        "no_orders_yet": "No orders yet",
+        "no_orders_desc": "You haven't purchased anything yet. Start shopping!",
+        "track_manage_orders": "Track your order status and manage orders",
+        "orders_found": "Orders",
+        "orders_selected": "Orders Selected",
+        "account_settings": "Account Settings",
+        "privacy_security": "Privacy & Security",
+        "delete_account": "Delete Account",
+        "delete_account_warning": "Are you sure you want to delete your account? This action cannot be undone and all data will be permanently deleted.",
+        "two_factor_auth": "Two-Factor Auth",
+        "two_factor_auth_desc": "Add an extra layer of security to your account",
+        "login_activity": "Login Activity",
+        "login_activity_desc": "Check recent login attempts and active sessions",
+        "export_data": "Export Data",
+        "export_data_desc": "Download a copy of your account data",
+        "account_actions": "Account Actions",
+        "logout_desc": "Log out from this device",
+        "delete_account_desc": "Permanently delete your account and all related data",
+        "last_updated": "Last Updated",
+        "notification_settings": "Notification Settings",
+        "manage_notifications": "Manage how you receive notifications",
+        "receive_notifications": "Receive Notifications",
+        "email_notifications": "Email Notifications",
+        "email_notifications_desc": "Get order updates and account alerts via email",
+        "sms_notifications": "SMS Notifications",
+        "sms_notifications_desc": "Get important updates via text message",
+        "order_updates": "Order Updates",
+        "order_updates_desc": "Notifications about order status, shipping, and delivery",
+        "promotions": "Promotions",
+        "promotions_desc": "Special deals, discounts, and promotional content",
+        "save_preferences": "Save Preferences",
+        "default_address_updated": "Default address updated",
+        "address_added": "Address added",
+        "address_updated": "Address updated",
+        "address_deleted": "Address deleted",
+        "delete_address_confirm": "Do you want to delete this address?",
+        "failed_to_update_default": "Failed to update default address",
+        "failed_to_add_address": "Failed to add address",
+        "failed_to_update_address": "Failed to update address",
+        "failed_to_delete_address": "Failed to delete address",
+        "delivery_request": "Delivery Request",
+        "dashboard": "Dashboard",
+        "manage_system": "Manage System",
+        "my_account": "My Account",
+        "manage_profile": "Manage Profile",
+        "select_section": "Select Section",
+        "track": "Track",
+        "order_tracking": "Order Tracking",
+        "order_number": "Order Number",
+        "download_receipt": "Download Receipt",
+        "processing": "Processing",
+        "shipped": "Shipped",
+        "delivered": "Delivered",
+        "your_order_is_currently_being": "Your order is currently being {{status}}.",
+        "tracking_number": "Tracking Number",
+        "estimated_delivery": "Estimated Delivery",
+        "qty": "Qty",
+        "order_summary": "Order Summary",
+        "payment_status_label": "Payment Status",
+        "order_date": "Order Date",
+        "need_help": "Need Help?",
+        "call_support": "Call Support",
+        "email_support": "Email Support",
+        "loading_order_details": "Loading order details...",
+        "order_not_found": "Order not found",
+        "back_to_account": "Back to Account",
+        "status": {
+            "confirmed": "Confirmed",
+            "Confirmed": "Confirmed",
+            "processing": "Processing",
+            "shipped": "Shipped",
+            "delivered": "Delivered",
+            "cancelled": "Cancelled"
+        },
+        "payment_status": {
+            "pending": "Pending",
+            "paid": "Paid",
+            "Paid": "Paid",
+            "failed": "Failed",
+            "refunded": "Refunded"
+        },
+        "wishlist": "Wishlist"
     }
 }
