--- a/src/locales/ko-extended.json
+++ b/src/locales/ko-extended.json
@@ -157,18 +157,24 @@
     "custom": "사용자 정의"
   },
   "account": {
+    "profile": "프로필",
+    "addresses": "주소",
+    "orders": "주문",
+    "payment": "결제",
+    "notifications": "알림",
+    "settings": "설정",
     "title": "프로필 수정",
     "edit_profile": "프로필 수정",
     "admin_dashboard": "관리자 대시보드",
-    "full_name": "성명",
-    "enter_full_name": "성명을 입력하세요",
+    "full_name": "성함",
+    "enter_full_name": "성함을 입력하세요",
     "email_address": "이메일 주소",
-    "email_cannot_be_changed": "이메일은 변경할 수 없습니다",
+    "email_cannot_be_changed": "이메일 주소는 변경할 수 없습니다",
     "phone_number": "전화번호",
     "enter_phone_number": "전화번호를 입력하세요",
     "change_picture": "사진 변경",
     "uploading": "업로드 중...",
-    "file_format_note": "JPG, GIF 또는 PNG. 최대 크기 5MB.",
+    "file_format_note": "JPG, GIF 또는 PNG 파일. 최대 크기 2MB",
     "no_image": "이미지 없음",
     "password_settings": "비밀번호 설정",
     "change_password": "비밀번호 변경",
@@ -181,7 +187,7 @@
     "update_profile": "프로필 업데이트",
     "updating": "업데이트 중...",
     "cancel": "취소",
-    "name_required": "성명을 입력해주세요",
+    "name_required": "이름을 입력해주세요",
     "email_required": "이메일을 입력해주세요",
     "valid_email": "유효한 이메일 주소를 입력해주세요",
     "valid_phone": "유효한 전화번호를 입력해주세요",
@@ -189,8 +195,8 @@
     "password_min_length": "비밀번호는 최소 6자 이상이어야 합니다",
     "passwords_do_not_match": "비밀번호가 일치하지 않습니다",
     "new_password_required": "새 비밀번호를 입력해주세요",
-    "oauth_user": "소셜 로그인 사용자",
-    "oauth_description": "소셜 로그인으로 가입한 계정입니다. 비밀번호 설정이 필요하지 않습니다.",
+    "oauth_user": "소셜 계정 로그인",
+    "oauth_description": "소셜 계정(Google, GitHub 등)으로 로그인한 경우 비밀번호를 여기서 관리할 수 없습니다.",
     "total_orders": "총 주문",
     "saved_addresses": "저장된 주소",
     "years_with_us": "함께한 년수",
@@ -206,11 +212,9 @@
     "is_authenticated": "인증 여부",
     "provider": "제공자",
     "created_at": "생성일",
-    "profile": "프로필",
     "first_name": "이름",
     "last_name": "성",
     "phone": "전화번호",
-    "addresses": "주소",
     "saved": "저장됨",
     "not_provided": "제공되지 않음",
     "quick_actions": "빠른 작업",
@@ -237,23 +241,18 @@
     "set_as_default": "기본 배송지로 설정",
     "delivery_request_notice": "사회적 거리두기를 위해, 모든 배송을 비대면으로 진행합니다.",
     "recipient_required": "받는사람은 필수입니다",
-    "phone_required": "전화번호는 필수입니다",
     "zipcode_required": "우편번호는 필수입니다",
     "address_required": "주소는 필수입니다",
     "detail_address_required": "상세주소는 필수입니다",
     "order_history": "주문 내역",
     "payment_methods": "결제 수단",
     "manage_payment": "결제 정보 및 수단을 관리하세요",
-    "settings": "설정",
     "manage_security": "보안 관리",
     "order_details": "주문 상세",
-    "placed_on": "주문일",
-    "status": "상태",
-    "items": "상품",
+    "placed_on": "주문일: {{date}}",
     "pay_now": "지금 결제",
     "track_order": "주문 조회",
-    "total_amount": "총액",
-    "order": "주문",
+    "total_amount": "총 결제 금액",
     "total": "총액",
     "error_loading_orders": "주문 내역을 불러오는 중 오류가 발생했습니다",
     "no_orders_yet": "아직 주문이 없습니다",
@@ -287,22 +286,57 @@
     "promotions": "프로모션",
     "promotions_desc": "특별 거래, 할인 및 프로모션 콘텐츠",
     "save_preferences": "설정 저장",
-    "default_address_updated": "기본 배송지가 업데이트되었습니다.",
-    "address_added": "배송지가 추가되었습니다.",
-    "address_updated": "배송지가 수정되었습니다.",
-    "address_deleted": "배송지가 삭제되었습니다.",
+    "default_address_updated": "기본 배송지 업데이트 완료",
+    "address_added": "배송지 추가 완료",
+    "address_updated": "배송지 수정 완료",
+    "address_deleted": "배송지 삭제 완료",
     "delete_address_confirm": "이 배송지를 삭제하시겠습니까?",
-    "failed_to_update_default": "기본 배송지 업데이트에 실패했습니다.",
-    "failed_to_add_address": "배송지 추가에 실패했습니다.",
-    "failed_to_update_address": "배송지 수정에 실패했습니다.",
-    "failed_to_delete_address": "배송지 삭제에 실패했습니다.",
+    "failed_to_update_default": "기본 배송지 업데이트 실패",
+    "failed_to_add_address": "배송지 추가 실패",
+    "failed_to_update_address": "배송지 수정 실패",
+    "failed_to_delete_address": "배송지 삭제 실패",
     "delivery_request": "배송 요청사항",
     "dashboard": "대시보드",
     "manage_system": "시스템 관리",
     "my_account": "마이페이지",
     "manage_profile": "프로필 관리",
     "select_section": "항목 선택",
-    "track": "조회"
+    "track": "조회",
+    "order_tracking": "주문 추적",
+    "order_number": "주문번호",
+    "download_receipt": "영수증 다운로드",
+    "processing": "준비 중",
+    "shipped": "배송 중",
+    "delivered": "배송 완료",
+    "your_order_is_currently_being": "주문하신 상품이 현재 {{status}} 상태입니다.",
+    "tracking_number": "운송장 번호",
+    "estimated_delivery": "예상 배송일",
+    "qty": "수량",
+    "order_summary": "주문 요약",
+    "payment_status_label": "결제 상태",
+    "order_date": "주문 날짜",
+    "need_help": "도움이 필요하신가요?",
+    "call_support": "전화 지원",
+    "email_support": "이메일 지원",
+    "loading_order_details": "주문 상세 정보를 불러오는 중...",
+    "order_not_found": "주문을 찾을 수 없습니다",
+    "back_to_account": "마이페이지로 돌아가기",
+    "status": {
+      "confirmed": "주문 확인",
+      "Confirmed": "주문 확인",
+      "processing": "준비 중",
+      "shipped": "배송 중",
+      "delivered": "배송 완료",
+      "cancelled": "취소됨"
+    },
+    "payment_status": {
+      "pending": "결제 대기",
+      "paid": "결제 완료",
+      "Paid": "결제 완료",
+      "failed": "결제 실패",
+      "refunded": "환불됨"
+    },
+    "wishlist": "관심 상품"
   },
   "orders": {
     "title": "주문 내역",
