--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -312,12 +312,194 @@
         "any_discount": "任何折扣",
         "percent_10_or_more": "10% 以上",
         "percent_20_or_more": "20% 以上",
-        "percent_30_or_more": "30% 이상",
-        "percent_40_or_more": "40% 이상",
-        "percent_50_or_more": "50% 이상",
+        "percent_30_or_more": "30% 以上",
+        "percent_40_or_more": "40% 以上",
+        "percent_50_or_more": "50% 以上",
         "percent_off": "% 折扣",
         "load_more_offers": "加载更多特价商品",
         "try_adjusting_filters": "尝试调整筛选条件以查找更多商品。",
         "clear_filters": "重置筛选"
+    },
+    "account": {
+        "profile": "个人资料",
+        "addresses": "收货地址",
+        "orders": "订单",
+        "payment": "支付",
+        "notifications": "通知",
+        "settings": "设置",
+        "title": "编辑个人资料",
+        "edit_profile": "编辑个人资料",
+        "admin_dashboard": "管理员面板",
+        "full_name": "姓名",
+        "enter_full_name": "请输入您的姓名",
+        "email_address": "电子邮箱",
+        "email_cannot_be_changed": "邮箱地址无法更改",
+        "phone_number": "电话号码",
+        "enter_phone_number": "请输入您的电话号码",
+        "change_picture": "更换头像",
+        "uploading": "正在上传...",
+        "file_format_note": "JPG, GIF 或 PNG。最大 2MB",
+        "no_image": "无图片",
+        "password_settings": "密码设置",
+        "change_password": "更改密码",
+        "current_password": "当前密码",
+        "enter_current_password": "请输入当前密码",
+        "new_password": "新密码",
+        "enter_new_password": "请输入新密码",
+        "confirm_new_password": "确认新密码",
+        "confirm_new_password_placeholder": "请再次输入新密码",
+        "update_profile": "更新个人资料",
+        "updating": "正在更新...",
+        "cancel": "取消",
+        "name_required": "请输入姓名",
+        "email_required": "请输入邮箱地址",
+        "valid_email": "请输入有效的邮箱地址",
+        "valid_phone": "请输入有效的电话号码",
+        "current_password_required": "请输入当前密码",
+        "password_min_length": "密码必须至少为 6 个字符",
+        "passwords_do_not_match": "密码不匹配",
+        "new_password_required": "请输入新密码",
+        "oauth_user": "第三方账号用户",
+        "oauth_description": "此账号通过第三方平台登录。密码设置由该平台管理。",
+        "total_orders": "总订单数",
+        "saved_addresses": "已存地址",
+        "years_with_us": "加入年数",
+        "current_user_info": "当前用户信息",
+        "id": "ID",
+        "not_available": "不适用",
+        "name": "姓名",
+        "email": "邮箱",
+        "role": "角色",
+        "is_admin": "管理员",
+        "yes": "是",
+        "no": "否",
+        "is_authenticated": "已认证",
+        "provider": "提供商",
+        "created_at": "创建时间",
+        "first_name": "名字",
+        "last_name": "姓氏",
+        "phone": "电话",
+        "saved": "已保存",
+        "not_provided": "未提供",
+        "quick_actions": "快捷操作",
+        "manage_addresses": "管理收货地址",
+        "manage_addresses_desc": "查看并管理您的配送地址。",
+        "add_new_address": "添加新地址",
+        "default_address": "默认地址",
+        "no_addresses": "暂无已存地址。",
+        "no_addresses_desc": "请添加收货地址以进行订购。",
+        "add_first_address": "添加您的第一个地址",
+        "edit_address": "编辑地址",
+        "add_address": "添加地址",
+        "recipient_name": "收件人",
+        "recipient_placeholder": "收件人姓名",
+        "search_address": "搜索地址",
+        "zipcode": "邮政编码",
+        "search_address_first": "搜索后自动填充",
+        "address": "地址",
+        "detail_address": "详细地址",
+        "detail_address_placeholder": "例如：101室、公寓名称等",
+        "entrance_code": "门禁码",
+        "entrance_code_placeholder": "例如：1234",
+        "entrance_code_notice": "门禁码仅用于配送目的。",
+        "set_as_default": "设置为默认地址",
+        "delivery_request_notice": "由于防疫要求，目前实行无接触配送。",
+        "recipient_required": "收件人姓名必填",
+        "zipcode_required": "邮政编码必填",
+        "address_required": "地址必填",
+        "detail_address_required": "详细地址必填",
+        "order_history": "订单记录",
+        "payment_methods": "支付方式",
+        "manage_payment": "管理您的支付信息和方式",
+        "manage_security": "安全管理",
+        "order_details": "订单详情",
+        "placed_on": "下单于: {{date}}",
+        "pay_now": "立即支付",
+        "track_order": "追踪订单",
+        "total_amount": "总金额",
+        "total": "总计",
+        "error_loading_orders": "加载订单记录时发生错误",
+        "no_orders_yet": "暂无订单",
+        "no_orders_desc": "您还没有购买任何商品。开始购物吧！",
+        "track_manage_orders": "追踪订单状态并管理订单",
+        "orders_found": "个订单",
+        "orders_selected": "个已选订单",
+        "account_settings": "账号设置",
+        "privacy_security": "隐私与安全",
+        "delete_account": "删除账号",
+        "delete_account_warning": "您确定要删除账号吗？此操作无法撤销，所有数据将被永久删除。",
+        "two_factor_auth": "双重身份验证",
+        "two_factor_auth_desc": "为您的账号增加一层安全保障",
+        "login_activity": "登录活动",
+        "login_activity_desc": "查看最近的登录尝试和活动会话",
+        "export_data": "导出数据",
+        "export_data_desc": "下载您的账号数据副本",
+        "account_actions": "账号操作",
+        "logout_desc": "从此设备登出",
+        "delete_account_desc": "永久删除您的账号及所有相关数据",
+        "last_updated": "最后更新",
+        "notification_settings": "通知设置",
+        "manage_notifications": "管理您接收通知的方式",
+        "receive_notifications": "接收通知",
+        "email_notifications": "邮件通知",
+        "email_notifications_desc": "通过邮件获取订单更新和账号提醒",
+        "sms_notifications": "短信通知",
+        "sms_notifications_desc": "通过短信获取重要更新",
+        "order_updates": "订单更新",
+        "order_updates_desc": "关于订单状态、发货和派送的通知",
+        "promotions": "促销活动",
+        "promotions_desc": "特别优惠、折扣和促销内容",
+        "save_preferences": "保存偏好",
+        "default_address_updated": "默认地址已更新",
+        "address_added": "地址已添加",
+        "address_updated": "地址已修改",
+        "address_deleted": "地址已删除",
+        "delete_address_confirm": "您确定要删除此地址吗？",
+        "failed_to_update_default": "更新默认地址失败",
+        "failed_to_add_address": "添加地址失败",
+        "failed_to_update_address": "修改地址失败",
+        "failed_to_delete_address": "删除地址失败",
+        "delivery_request": "配送要求",
+        "dashboard": "控制面板",
+        "manage_system": "管理系统",
+        "my_account": "我的账户",
+        "manage_profile": "管理个人资料",
+        "select_section": "选择板块",
+        "track": "查询",
+        "order_tracking": "订单查询",
+        "order_number": "订单号",
+        "download_receipt": "下载收据",
+        "processing": "处理中",
+        "shipped": "已发货",
+        "delivered": "已送达",
+        "your_order_is_currently_being": "您的订单目前处于{{status}}状态。",
+        "tracking_number": "运单号",
+        "estimated_delivery": "预计送达",
+        "qty": "数量",
+        "order_summary": "订单摘要",
+        "payment_status_label": "支付状态",
+        "order_date": "订单日期",
+        "need_help": "需要帮助吗？",
+        "call_support": "电话支持",
+        "email_support": "邮件支持",
+        "loading_order_details": "正在加载订单详情...",
+        "order_not_found": "找不到订单",
+        "back_to_account": "返回我的账户",
+        "status": {
+            "confirmed": "已确认",
+            "Confirmed": "已确认",
+            "processing": "处理中",
+            "shipped": "已发货",
+            "delivered": "已送达",
+            "cancelled": "已取消"
+        },
+        "payment_status": {
+            "pending": "待支付",
+            "paid": "已支付",
+            "Paid": "已支付",
+            "failed": "支付失败",
+            "refunded": "已退款"
+        },
+        "wishlist": "我的收藏"
     }
 }
