한글화 작업! 오더 페이지

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -416,6 +416,9 @@
         "pay_now": "Pay Now",
         "track_order": "Track Order",
         "total_amount": "Total Amount",
+        "order": "Order",
+        "items_label": "Items",
+        "status_label": "Status",
         "total": "Total",
         "error_loading_orders": "An error occurred while loading order history",
         "no_orders_yet": "No orders yet",
@@ -481,6 +484,8 @@
         "need_help": "Need Help?",
         "call_support": "Call Support",
         "email_support": "Email Support",
+        "support_phone": "010-7218-2858",
+        "support_email": "jgdglobal@kakao.com",
         "loading_order_details": "Loading order details...",
         "order_not_found": "Order not found",
         "back_to_account": "Back to Account",
