--- a/src/locales/ko-extended.json
+++ b/src/locales/ko-extended.json
@@ -253,6 +253,9 @@
     "pay_now": "지금 결제",
     "track_order": "주문 조회",
     "total_amount": "총 결제 금액",
+    "order": "주문",
+    "items_label": "상품",
+    "status_label": "상태",
     "total": "총액",
     "error_loading_orders": "주문 내역을 불러오는 중 오류가 발생했습니다",
     "no_orders_yet": "아직 주문이 없습니다",
@@ -318,6 +321,8 @@
     "need_help": "도움이 필요하신가요?",
     "call_support": "전화 지원",
     "email_support": "이메일 지원",
+    "support_phone": "010-7218-2858",
+    "support_email": "jgdglobal@kakao.com",
     "loading_order_details": "주문 상세 정보를 불러오는 중...",
     "order_not_found": "주문을 찾을 수 없습니다",
     "back_to_account": "마이페이지로 돌아가기",
