--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -417,6 +417,9 @@
         "pay_now": "立即支付",
         "track_order": "追踪订单",
         "total_amount": "总金额",
+        "order": "订单",
+        "items_label": "商品",
+        "status_label": "状态",
         "total": "总计",
         "error_loading_orders": "加载订单记录时发生错误",
         "no_orders_yet": "暂无订单",
@@ -482,6 +485,8 @@
         "need_help": "需要帮助吗？",
         "call_support": "电话支持",
         "email_support": "邮件支持",
+        "support_phone": "010-7218-2858",
+        "support_email": "jgdglobal@kakao.com",
         "loading_order_details": "正在加载订单详情...",
         "order_not_found": "找不到订单",
         "back_to_account": "返回我的账户",
