설정 페이지 자체 삭제 하기

--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -3,6 +3,7 @@
     "account_actions": "계정 작업",
     "account_settings": "계정 설정",
     "add_address": "주소 추가",
+    "add_card": "카드 추가",
     "add_first_address": "첫 번째 주소 추가하기",
     "add_new_address": "새 주소 추가",
     "add_payment_method": "결제 수단 추가",
@@ -16,6 +17,11 @@
     "back_to_account": "마이페이지로 돌아가기",
     "call_support": "전화 지원",
     "cancel": "취소",
+    "card_added": "카드가 등록되었습니다",
+    "card_deleted": "카드가 삭제되었습니다",
+    "delete_card": "카드 삭제",
+    "delete_card_confirm": "이 카드를 삭제하시겠습니까?",
+    "no_payment_methods": "등록된 결제 수단이 없습니다",
     "change_password": "비밀번호 변경",
     "change_picture": "사진 변경",
     "confirm_new_password": "새 비밀번호 확인",
