주문내역 페이지 수정

--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -162,6 +162,7 @@
     "set_as_default": "기본 배송지로 설정",
     "settings": "설정",
     "shipped": "배송 중",
+    "shipping_address": "배송 주소",
     "sms_notifications": "SMS 알림",
     "sms_notifications_desc": "문자 메시지로 중요한 업데이트를 받으세요",
     "status": {
@@ -716,6 +717,21 @@
     "try_adjusting_filters": "필터를 조정하여 다른 상품을 찾아보세요."
   },
   "orders": {
+    "tab_all": "전체",
+    "tab_pending": "결제 대기",
+    "tab_paid": "결제 완료",
+    "tab_shipping": "배송",
+    "tab_cancelled": "취소",
+    "cancel_reason": "취소 사유",
+    "select_reason": "사유를 선택해주세요",
+    "reason_customer_change": "단순 변심",
+    "reason_defective": "상품 불량",
+    "reason_wrong_delivery": "오배송",
+    "reason_other": "기타",
+    "order_amount": "주문 금액",
+    "shipping_fee_deduction": "왕복 택배비 차감 6,000원",
+    "customer_change_notice": "단순 변심으로 인한 취소 시 왕복 택배비가 차감됩니다.",
+    "select_cancel_reason": "취소 사유를 선택해주세요.",
     "allergic_reaction": "알레르기 반응",
     "better_price": "더 좋은 가격 발견",
     "billing_address": "청구 주소",
