구매 취소 토스와 연동 및 왕복 택배비 차감 구현

--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -37,6 +37,8 @@
     "delete_account_desc": "계정 및 모든 관련 데이터를 영구적으로 삭제합니다",
     "delete_account_warning": "정말로 계정을 삭제하시겠습니까? 이 작업은 되돌릴 수 없으며 모든 데이터가 영구적으로 삭제됩니다.",
     "delete_address_confirm": "이 배송지를 삭제하시겠습니까?",
+    "delete_orders": "선택 삭제",
+    "delete_orders_confirm": "선택한 주문 기록을 삭제하시겠습니까?\n이 작업은 되돌릴 수 없습니다.",
     "delivered": "배송 완료",
     "delivery_request": "배송 요청사항",
     "delivery_request_notice": "사회적 거리두기를 위해, 모든 배송을 비대면으로 진행합니다.",
@@ -731,6 +733,11 @@
     "order_amount": "주문 금액",
     "shipping_fee_deduction": "왕복 택배비 차감 6,000원",
     "customer_change_notice": "단순 변심으로 인한 취소 시 왕복 택배비가 차감됩니다.",
+    "deficit_notice": "주문 금액보다 차감될 배송비가 큽니다.\n부족한 배송비를 결제하시면 취소가 완료됩니다.",
+    "additional_payment_required": "추가 결제 필요 금액",
+    "pay_and_cancel": "결제하고 취소하기",
+    "payment_request_failed": "결제 요청에 실패했습니다.",
+    "processing": "처리 중...",
     "select_cancel_reason": "취소 사유를 선택해주세요.",
     "allergic_reaction": "알레르기 반응",
     "better_price": "더 좋은 가격 발견",
